--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,11 +1,13 @@
-/* lora-700 - latin */
 @font-face {
-  font-family: 'Lora';
+  font-family: 'salomeregular';
+  src: url('/fonts/salome-webfont.eot');
+  src: url('/fonts/salome-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/salome-webfont.woff2') format('woff2'),
+    url('/fonts/salome-webfont.woff') format('woff'),
+    url('/fonts/salome-webfont.ttf') format('truetype'),
+    url('/fonts/salome-webfont.svg#salomeregular') format('svg');
+  font-weight: normal;
   font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: local('Lora Bold'), local('Lora-Bold'),
-    url('/fonts/lora-v13-latin-700.woff') format('woff');
 }
 
 body {
